--- a/webcli/src/app/vocabulary/components/add-translation/add-translation.component.html
+++ b/webcli/src/app/vocabulary/components/add-translation/add-translation.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="form">
-  <mat-form-field>
-    <mat-label>Add translations (multiple translations will added using newline as a separator)</mat-label>
+  <mat-form-field fxFlex="50%">
+    <mat-label>Add translations (multiple translations will added using a newline as a separator)</mat-label>
     <textarea cdkAutosizeMaxRows="10"
               cdkAutosizeMinRows="2"
               cdkTextareaAutosize
